@@ -1,3 +1,10 @@
+2004-10-14  Rodney Dawes  <dobey@novell.com>
+
+	* gnome-wp-item.c (gnome_wp_item_update_description):
+	Use g_markup_printf_escaped () to fill in the description
+
+	Fixes #155184
+
 2004-09-29  Rodney Dawes  <dobey@novell.com>
 
 	* gnome-wp-item.c (gnome_wp_item_new): Unescape the filename so that
